--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "dm",
-	"token" : "OTE5MDQzNDYwMDQyOTgxMzc2.YbQD6w.zyzpywlcS3A8OYYcn5cCMzDGI-I",
+	"prefix" : "!",
+	"token" : "OTQwNjc4NTExODA5Njc1Mzg0.YgK5Ig.LHQ49I6yTIilaTxP3G_o3_b7v-0",
 	"delay" : "1",
 	"log_dms" : "on"
 }
